CH-41 Fixed overflow

--- a/packages/canvas-panel-cookbook/src/App.scss
+++ b/packages/canvas-panel-cookbook/src/App.scss
@@ -25,8 +25,7 @@ body {
   letter-spacing: 0.25px;
   font-weight: 300;
   white-space: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .app-navigation {
